--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".multi-collapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mx-auto d-flex d-sm-none" href="#">
+            <a class="navbar-brand mx-auto d-block d-sm-none" href="#">
                 <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
             </a>
-
             <div class="collapse navbar-collapse multi-collapse justify-content-around" id="navLeft">
                 <ul class="navbar-nav">
                     <li class="nav-item p-sm-1 p-md-2 p-lg-4 active"><a class="nav-link" href="#">HOME</a></li>
@@ -35,18 +34,45 @@
                     <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="menu.html">MENU</a></li>
                 </ul>
             </div>
-            <a class="navbar-brand mx-auto d-none d-sm-flex justify-content-around" href="index.html">
-                <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
-            </a>
-            <div class="collapse navbar-collapse multi-collapse" id="navRight">        
-                <ul class="navbar-nav">   
+                <a class="navbar-brand mx-sm-auto d-none d-sm-block" href="index.html">
+                    <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
+                </a>
+            
+            <div class="collapse navbar-collapse multi-collapse justify-content-around" id="navRight">        
+                    <ul class="navbar-nav">   
                     <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="event_space.html">EVENT SPACE</a></li>
                     <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="contact.html">CONTACT</a></li>
                     <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="press.html">PRESS</a></li>
                 </ul>
             </div>
-        </nav>
-    </header>
+        
+        <!--
+        <nav class="navbar navbar-expand-sm navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>    
+            <div class="navbar-brand d-flex d-sm-none" href="#">
+                <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo" class="mx-auto"></img>
+            </div>
+            <div class="collapse navbar-collapse" id="navLeft">
+                <div class="navbar-nav mx-auto">
+                    <a class="nav-item nav-link active" href="#">HOME</a>
+                    <a class="nav-item nav-link" href="about.html">ABOUT</a>           
+                    <a class="nav-item nav-link" href="menu.html">MENU</a>
+                </div>
+            </div>
+            <div class="navbar-brand d-none d-sm-flex"> 
+                <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo" class="mx-auto align-self-baseline"></img>  
+            </div>  
+            <div class="collapse navbar-collapse" id="navRight">        
+                <div class="navbar-nav mx-auto"> 
+                    <a class="nav-item nav-link navbar-text" href="event_space.html">EVENT SPACE</a>
+                    <a class="nav-item nav-link navbar-text" href="contact.html">CONTACT</a>
+                    <a class="nav-item nav-link navbar-text" href="press.html">PRESS</a>
+                </div>
+            </div>
+        </nav> -->
+    </header> 
 
     <div class="container">
         <div class="row p-3 row-content align-items-center">
@@ -79,10 +105,10 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="card bg-dark text-white my-auto d-none d-md-block">
+                    <div class="card my-auto bg-transparent d-none d-md-block" id="IGCard">
                         <img class="card-img" id="IGBar" size="max-width: 90%; height: auto;" src="img/FPIG.png" alt="Five Points Instagram Bar">
-                        <div class="card-img-overlay d-none text-center" id="IGOverlay">
-                            <a href="https://www.instagram.com/fivepointsbakery/" target="_blank" class="card-link paragraph text-white" style="font-size: 4rem">@fivepointsbakery</a>
+                        <div class="card-img-overlay d-none text-center my-auto" id="IGOverlay">
+                            <a href="https://www.instagram.com/fivepointsbakery/" target="_blank" class="card-link paragraph text-white bg-transparent" style="font-size: 4rem">@fivepointsbakery</a>
                         </div>
                     </div>
                 </div>
