Menu Buttons jQuery

--- a/menu.html
+++ b/menu.html
@@ -97,14 +97,10 @@
 
         <div class="row justify-content-center py-2">
             <div class="col text-center">
-                <a role="button" id="menuButton" href="img/Farmers Pantry - Feb 28 2020 - 8-23 PM.pdf" target="_blank">
+                <a role="button" id="farmButton" href="img/Farmers Pantry - Feb 28 2020 - 8-23 PM.pdf" target="_blank">
                     <img class="img-fluid w-25" src="img/farm_pantry.jpg" alt="farmers' pantry menu button"/>
                 </a>
             </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            
         </div>
        
     </div>
