Added About page and worked on NavBar

--- a/event_space.html
+++ b/event_space.html
@@ -98,9 +98,9 @@
                 <p>Unfortunately, we do not allow private parties from 7am-3pm on Friday, Saturday, and Sunday.</p>
              </div>     
         </div>
-        <div class="row row-content align-items-start">
+        <div class="row row-content">
             <div class="col-md-6 mx-auto align-items-start">
-                <div class="card small bg-light">
+                <div class="card small bg-light event_card">
                     <div class="card-header mx-auto my-auto bg-light" style="border-bottom: 0 none;">
                         <h4><strong>Hourly Rental Options</strong></h4>
                     </div>
@@ -134,8 +134,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 p-2 mx-auto">
-                <div class="card small bg-light">
+            <div class="col-md-6 align-items-start text-center">
+                <div class="card small bg-light event_card">
                     <div class="card-header mx-auto my-auto bg-light" style="border-bottom: 0 none;">
                         <h4><strong>Refreshments</strong></h4>
                     </div>
