--- a/contact.html
+++ b/contact.html
@@ -48,10 +48,11 @@
         </nav>
     </header>
   
-<div class="container my-4">
-    <div class="row position-relative">
+<div class="container-fluid m-0 cinnroll">
+    <!--<div class="jumbotron">
         <img class="img-fluid mx-auto" size="max-width: 100%; height: auto;" src="img/cinnroll.jpg" alt="cinnamon roll" size="2rem">
-    </div>
+        
+    </div>-->
       <!---------------Contact Form-------------------------------------->
     <div class="row p-4">
         <div class="col col-md-8 mx-auto">
