--- a/event_space.html
+++ b/event_space.html
@@ -20,29 +20,25 @@
 <body> 
    
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light sticky-top">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".multi-collapse">
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#FPnav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mx-auto d-block d-sm-none" href="#">
+            <a class="mx-auto d-block d-md-none" href="#">
                 <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
             </a>
-            <div class="collapse navbar-collapse multi-collapse justify-content-around" id="navLeft">
-                <ul class="navbar-nav">
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="index.html">HOME</a></li>
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="about.html">ABOUT</a></li>
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="menu.html">MENU</a></li>
-                </ul>
-            </div>
-                <a class="navbar-brand mx-sm-auto d-none d-sm-block" href="index.html">
-                    <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
-                </a>
-            
-            <div class="collapse navbar-collapse multi-collapse justify-content-around" id="navRight">        
-                    <ul class="navbar-nav">   
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4 active"><a class="nav-link" href="event_space.html">EVENT SPACE</a></li>
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="contact.html">CONTACT</a></li>
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="press.html">PRESS</a></li>
+            <div class="collapse navbar-collapse justify-content-around p-0" id="FPnav">
+                <ul class="navbar-nav align-items-center nav-fill w-100">
+                    <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
+                    <li class="nav-item text-nowrap active"><a class="nav-link" href="event_space.html">EVENT SPACE</a></li>
+                    <li class="navbar-brand mx-auto d-none d-md-flex px-2">
+                        <a href="index.html">
+                            <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
+                        </a></li> 
+                    <li class="nav-item"><a class="nav-link" href="menu.html">    MENU    </a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
+                    <li class="nav-item"><a class="nav-link" href="press.html">PRESS</a></li>
                 </ul>
             </div>
         </nav>
@@ -156,9 +152,9 @@
                             </tr>  
                             </tbody>
                         </table>
-                </div>
                     </div>
                 </div>
+            </div>
         </div>
         <div class="row p-4">
             <div class="col text-center">
