--- a/index.html
+++ b/index.html
@@ -20,69 +20,41 @@
 <body> 
    
     <header>
-                <!--class="container-fluid"
-        <div class="row mx-auto logoRow">
-            <a class="navbar-brand navbar-brand-centered mx-sm-auto d-none d-sm-block" href="index.html">
-                <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
-            </a>
-        </div>
-        <nav class="navbar navbar-expand-sm navbar-light sticky-top">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".multi-collapse">
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#FPnav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!--<a class="navbar-brand mx-auto d-block d-sm-none" href="#">
+            <a class="mx-auto d-block d-md-none" href="#">
                 <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
-            </a>-->
-            <div class="collapse navbar-collapse multi-collapse justify-content-around" id="navLeft">
-                <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#">HOME</a></li>
+            </a>
+            <div class="collapse navbar-collapse justify-content-around p-0" id="FPnav">
+                <ul class="navbar-nav align-items-center nav-fill w-100">
+                    <li class="nav-item active"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
-                    <li class="nav-item"><a class="nav-link" href="menu.html">MENU</a></li>  
-                    <li class="nav-item"><a class="nav-link" href="event_space.html">EVENT SPACE</a></li>
+                    <li class="nav-item text-nowrap"><a class="nav-link" href="event_space.html">EVENT SPACE</a></li>
+                    <li class="navbar-brand mx-auto d-none d-md-flex px-2">
+                        <a href="index.html">
+                            <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
+                        </a></li> 
+                    <li class="nav-item"><a class="nav-link" href="menu.html">    MENU    </a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
                     <li class="nav-item"><a class="nav-link" href="press.html">PRESS</a></li>
                 </ul>
-            </div>-->
-        
-
-        <nav class="navbar navbar-expand-sm navbar-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>    
-            <div class="navbar-brand d-flex d-sm-none" href="#">
-                <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo" class="mx-auto"></img>
             </div>
-            <div class="collapse navbar-collapse" id="navLeft">
-                <div class="navbar-nav mx-auto">
-                    <a class="nav-item nav-link active" href="#">HOME</a>
-                    <a class="nav-item nav-link" href="about.html">ABOUT</a> 
-                    <a class="nav-item nav-link navbar-text" href="event_space.html">EVENT SPACE</a>          
-                    
-                </div>
-            </div>
-            <div class="navbar-brand d-none d-sm-flex"> 
-                <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo" class="mx-auto align-self-baseline"></img>  
-            </div>  
-            <div class="collapse navbar-collapse" id="navRight">        
-                <div class="navbar-nav mx-auto"> 
-                    <a class="nav-item nav-link" href="menu.html">MENU</a>
-                    <a class="nav-item nav-link navbar-text" href="contact.html">CONTACT</a>
-                    <a class="nav-item nav-link navbar-text" href="press.html">PRESS</a>
-                </div>
-            </div>
-        </nav> 
+        </nav>
     </header> 
 
     <div class="container">
         <div class="row p-3 row-content align-items-center">
             <img class="img-fluid" size="max-width: 100%; height: auto;" src="img/fp-gate-yeah-buf.jpg" alt="Five Points outside">
+        <!--https://www.google.com/search?q=five+points+bakery&tbm=isch&ved=2ahUKEwiMsYS8osXoAhWzcc0KHbFGAtEQ2-cCegQIABAA&oq=five+points+bakery&gs_lcp=CgNpbWcQAzIECCMQJzIECCMQJzICCAAyAggAMgIIADIECAAQGDIECAAQGDIECAAQGDIECAAQGDIECAAQGDoECAAQHlCkxQRY68wEYOfRBGgAcAB4AYABuwKIAZYHkgEHMy4zLjAuMZgBAKABAaoBC2d3cy13aXotaW1n&sclient=img&ei=EoKDXozgJ7PjtQaxjYmIDQ&bih=612&biw=1278#imgrc=uTtc7CqUtYB7wM-->
         </div>
         <div class="row p-3 row-content align-items-center values" style="background-color: #f7fcfe;">
              <div class="col-4">
                 <p>Simple <br>Timeless <br>Honest <br>Balanced <br> Really Good.</p>
              </div>
              <div class="col paragraph">
-                <p>Five Points Bakery values the highest quality ingredients, sourced locally. Our wheat comes from an Erie County farm and we mill our flour on site. Come by and buy a loaf, have a delicious baked good or toast plate, and enjoy our beautiful old building.</p>
+                <p>Five Points Bakery values the highest quality ingredients, sourced locally. Our wheat comes from an Erie County farm and we mill our flour on site. Come by and buy a loaf, have a delicious baked good or toast plate, and enjoy our beautiful building.</p>
              </div>
         </div>
 
