--- a/about.html
+++ b/about.html
@@ -18,29 +18,23 @@
     </head>
 
 <body> 
-   
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light fixed-top">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".multi-collapse">
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#FPnav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mx-auto d-block d-sm-none" href="#">
+            <a class="mx-auto d-block d-md-none" href="#">
                 <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
             </a>
-            <div class="collapse navbar-collapse multi-collapse justify-content-around" id="navLeft">
-                <ul class="navbar-nav align-items-center">
+            <div class="collapse navbar-collapse justify-content-around p-0" id="FPnav">
+                <ul class="navbar-nav align-items-center nav-fill w-100">
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item active"><a class="nav-link" href="#">ABOUT</a></li>
-                    <li class="nav-item"><a class="nav-link" href="event_space.html">EVENT SPACE</a></li>
-                </ul>
-           </div> 
-           <div class="mx-auto">
-                <a class="navbar-brand mx-sm-auto d-none d-sm-block" href="index.html">
-                    <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
-                </a>
-            </div>
-            <div class="collapse navbar-collapse multi-collapse justify-content-around" id="navRight">       
-                <ul class="navbar-nav">   
+                    <li class="nav-item text-nowrap"><a class="nav-link" href="event_space.html">EVENT SPACE</a></li>
+                    <li class="navbar-brand mx-auto d-none d-md-flex px-2">
+                        <a href="index.html">
+                            <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
+                        </a></li> 
                     <li class="nav-item"><a class="nav-link" href="menu.html">    MENU    </a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
                     <li class="nav-item"><a class="nav-link" href="press.html">PRESS</a></li>
@@ -49,20 +43,16 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container mx-auto">
         <div class="row p-3 row-content align-items-center">
             <img class="img-fluid" size="max-width: 100%; height: auto;" src="img/K+M.jpg" alt="Kevin and Melissa">
+        <!--https://buffalonews.com/2018/05/22/supporter-loans-let-five-points-bakery-bypass-banks/-->
         </div>
 
         <div class="row row-content align-items-center">
              <div class="col paragraph" style="text-align: center">
                 <h1>About Five Points</h1> 
-                <p>blah blah blah stories</p>
-                <p>blah blah blah stories</p>
-                <p>blah blah blah stories</p>
-                <p>blah blah blah stories</p>
-                <p>blah blah blah stories</p>
-                <p>blah blah blah stories</p>
+                <p><br><br><br>Something written by Melissa <br><br><br></p>
              </div>
         </div>
 
