--- a/press.html
+++ b/press.html
@@ -17,32 +17,27 @@
         <title>Five Points Bakery</title>
     </head>
 
-<body> 
-   
+<body>   
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light sticky-top">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".multi-collapse">
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#FPnav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mx-auto d-block d-sm-none" href="#">
+            <a class="mx-auto d-block d-md-none" href="#">
                 <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
             </a>
-            <div class="collapse navbar-collapse multi-collapse justify-content-around" id="navLeft">
-                <ul class="navbar-nav">
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="index.html">HOME</a></li>
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="about.html">ABOUT</a></li>
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="menu.html">MENU</a></li>
-                </ul>
-            </div>
-                <a class="navbar-brand mx-sm-auto d-none d-sm-block" href="index.html">
-                    <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
-                </a>
-            
-            <div class="collapse navbar-collapse multi-collapse justify-content-around" id="navRight">        
-                    <ul class="navbar-nav">   
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="event_space.html">EVENT SPACE</a></li>
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4"><a class="nav-link" href="contact.html">CONTACT</a></li>
-                    <li class="nav-item p-sm-1 p-md-2 p-lg-4 active"><a class="nav-link" href="#">PRESS</a></li>
+            <div class="collapse navbar-collapse justify-content-around p-0" id="FPnav">
+                <ul class="navbar-nav align-items-center nav-fill w-100">
+                    <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
+                    <li class="nav-item text-nowrap"><a class="nav-link" href="event_space.html">EVENT SPACE</a></li>
+                    <li class="navbar-brand mx-auto d-none d-md-flex px-2">
+                        <a href="index.html">
+                            <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
+                        </a></li> 
+                    <li class="nav-item"><a class="nav-link" href="menu.html">    MENU    </a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="press.html">PRESS</a></li>
                 </ul>
             </div>
         </nav>
@@ -63,21 +58,22 @@
        
     </div>
 
-    <footer class="site-footer">
+    <footer class="site-footer p-2">
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="card bg-dark text-white my-auto">
+                    <div class="card my-auto bg-transparent d-none d-md-block" id="IGCard">
                         <img class="card-img" id="IGBar" size="max-width: 90%; height: auto;" src="img/FPIG.png" alt="Five Points Instagram Bar">
-                        <div class="card-img-overlay d-none text-center" id="IGOverlay">
-                            <a href="https://www.instagram.com/fivepointsbakery/" target="_blank" class="card-link paragraph text-white" style="font-size: 5rem">@fivepointsbakery</a>
+                        <div class="card-img-overlay d-none text-center my-auto" id="IGOverlay">
+                            <a href="https://www.instagram.com/fivepointsbakery/" target="_blank" class="card-link paragraph text-white bg-transparent" style="font-size: 4rem">@fivepointsbakery</a>
                         </div>
                     </div>
                 </div>
             </div> 
             <div class="row justify-content-center">
-                <div class="col-1 py-5 text-center">
+                <div class="col py-5 text-center">
                     <a href="https://www.facebook.com/Five-Points-Bakery-85213183615/" target="_blank" class="mx-auto"><i class="fa fa-facebook-square fa-3x fa-inverse"></i></a>
+                    <a href="https://www.instagram.com/fivepointsbakery/" target="_blank" class="mx-auto d-md-none"><i class="fa fa-instagram fa-3x fa-inverse"></i></a>
                 </div>
             </div>
         </div>
