Fixed card display

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <div class="row row-content align-items-center">
              <div class="col paragraph" style="text-align: center">
                 <h1>About Five Points</h1> 
-                <p><br><br><br>Something written by Melissa <br><br><br></p>
+                <p><br><br><br>Something written by Melissa about local ingredients <br><br><br></p>
              </div>
         </div>
 
