--- a/event_space.html
+++ b/event_space.html
@@ -91,12 +91,17 @@
                 <p>Host your event on our beautiful second floor. Perfect for company parties, business networking events, baby showers, birthday parties, and more!</p>
              </div>
              <div class="col-sm-4 address">
-                <p>Unfortunately, we do not allow private parties from 7am-3pm on Friday, Saturday, and Sunday.</p>
+                <p>*Unfortunately, we do not allow private parties from 7am-3pm on Friday, Saturday, and Sunday.
+                    <br /> *WiFi and parking included
+                    <br /> *Times include setup and breakdown
+                    <br /> *Prices are open to negotiation, depending on your needs
+                    <br /> *There is currently no wheelchair access to the second floor
+                </p>
              </div>     
         </div>
         <div class="row row-content">
             <div class="col-md-6 mx-auto align-items-start">
-                <div class="card small bg-light event_card">
+                <div class="card small bg-light event_card h-100" id="hourCard">
                     <div class="card-header mx-auto my-auto bg-light" style="border-bottom: 0 none;">
                         <h4><strong>Hourly Rental Options</strong></h4>
                     </div>
@@ -131,7 +136,7 @@
                 </div>
             </div>
             <div class="col-md-6 align-items-start text-center">
-                <div class="card small bg-light event_card">
+                <div class="card small bg-light event_card h-100" id="refreshCard">
                     <div class="card-header mx-auto my-auto bg-light" style="border-bottom: 0 none;">
                         <h4><strong>Refreshments</strong></h4>
                     </div>
