--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#FPnav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="mx-auto d-block d-md-none" href="#">
+            <a class="navbar-brand d-block d-md-none" href="#">
                 <img src="img/FINAL_LOGO.png" width="150" height="150" alt="Five Points Logo">
             </a>
-            <div class="collapse navbar-collapse justify-content-around p-0" id="FPnav">
+            <div class="collapse navbar-collapse" id="FPnav">
                 <ul class="navbar-nav align-items-center nav-fill w-100">
                     <li class="nav-item active"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
